@@ -22,6 +22,10 @@
     "mails": ["55152140+jayaddison@users.noreply.github.com", "jay@jp-hosting.net"],
     "name": "James Addison"
   },
+  "Hnasar@users.noreply.github.com": {
+    "mails": ["Hnasar@users.noreply.github.com", "hashem@hudson-trading.com"],
+    "name": "Hashem Nasarat"
+  },
   "adam.grant.hendry@gmail.com": {
     "mails": ["adam.grant.hendry@gmail.com"],
     "name": "Adam Hendry"
@@ -84,10 +88,6 @@
     "mails": ["guillaume.peillex@gmail.com"],
     "name": "Hippo91",
     "team": "Maintainers"
-  },
-  "Hnasar@users.noreply.github.com": {
-    "mails": ["Hnasar@users.noreply.github.com", "hashem@hudson-trading.com"],
-    "name": "Hashem Nasarat"
   },
   "hugovk@users.noreply.github.com": {
     "mails": ["hugovk@users.noreply.github.com"],
