@@ -9,9 +9,15 @@ Release date: TBA
 
 
 
-What's New in astroid 3.3.3?
+What's New in astroid 3.3.4?
 ============================
 Release date: TBA
+
+
+
+What's New in astroid 3.3.3?
+============================
+Release date: 2024-09-20
 
 * Fix inference regression with property setters.
 
